@@ -6,6 +6,20 @@ Example : !\n\r\
 Short(s): \n\r\
 Repeats the last command you entered.
 
+ABILITIES=\
+Command : ABILITIES\n\r\
+Usage   : ABILITIES (DOMAIN,ABIILITY TYPE,etc..)/[NAME] ([LEVEL])\n\r\
+Example : abilities\n\r\
+Example : abilities conjuration\n\r\
+Example : abilities skill\n\r\
+Example : abilities fireball\n\r\
+Short(s): \n\r\
+Lists any abilities that you know, of all types, along with your proficiency in them.  Can also be \
+qualified to list your abilities by domain.  \
+You can get your level and proficiency for a particular ability by listing it by name. \
+A level parameter may be given to show abilities only up to that level. \
+See also the SKILLS, SPELLS, CHANTS, and PRAYERS commands.
+
 ABOVE=\
 Command : ABOVE\n\r\
 Usage   : ABOVE\n\r\
